* vm_exec.h (GENTRY): GENTRY should be pointer size.   A patch by yoshidam (Yoshida Masato) [Bug #7332].

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@37661 b2dd03c8-39d4-4d8f-98ff-823fe69b080e