vm_exec.h
@@ -14,7 +14,7 @@
 
 typedef long OFFSET;
 typedef unsigned long lindex_t;
-typedef rb_num_t GENTRY;
+typedef VALUE GENTRY;
 typedef rb_iseq_t *ISEQ;
 
 #ifdef __GCC__
